# dida-mcp

./: .gitignore  Cargo.toml  README.md  config.toml.example  justfile
assets/: tools.json
src/: auth.rs  config.rs  main.rs  server.rs
src/proxy/: mod.rs  types.rs
